--- a/src/main.css
+++ b/src/main.css
@@ -6,13 +6,69 @@ body {
   max-width: 1024px;
   margin: auto auto;
 }
-.header {
+.header-desktop {
+  display: none;
   height: 600px;
   background: url("./assets/images/header3.jpg");
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
   background-position: center top;
   border-radius: 0 0 3px 3px;
+}
+.header-mobile {
+  margin: 10px;
+}
+.header-mobile__container {
+  display: flex;
+  align-items: center;
+}
+.header-mobile__logo {
+  width: 100px;
+  margin: 10px auto;
+}
+.header-mobile__logo > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.header-mobile__menu {
+  width: 25px;
+}
+.header-mobile__menu > img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .header-desktop {
+    display: block;
+  }
+  .header-mobile {
+    display: none;
+  }
+  .text-section {
+    margin: 40px;
+    margin: 40px 100px;
+    margin-top: 0;
+  }
+  .quality-container {
+    display: grid;
+    grid-template-columns: 420px 1fr;
+    justify-content: center;
+  }
+  .quality-container__video {
+    display: block !important;
+  }
+  .quality-container__video > video {
+    max-width: 420px;
+    width: 100%;
+    border-radius: 3px;
+  }
+  .quality-container__tecnologias {
+    flex-direction:column;
+    margin: auto;
+    overflow-x: hidden !important;
+  }
 }
 .header-menu {
   margin: 0;
@@ -22,7 +78,7 @@ body {
   justify-content: center;
 }
 .header-menu > li {
-  list-style: none  ;
+  list-style: none;
 }
 .header-menu__item > a {
   color: white;
@@ -40,7 +96,7 @@ body {
   transition: 0.3s;
 }
 .header-menu__item__img {
-  transition: .2s;
+  transition: 0.2s;
   cursor: pointer;
 }
 .header-menu__item__img:hover {
@@ -82,11 +138,6 @@ section {
 .group-photos {
   padding-top: 0;
 }
-.text-section {
-  margin: 40px;
-  margin: 40px 100px;
-  margin-top: 0;
-}
 .group-photos__container {
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -98,27 +149,24 @@ section {
   height: 100%;
   object-fit: cover;
   border-radius: 3px;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .group-photos__container__item:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
 
-.quality-container{
-  display: grid;
-  grid-template-columns: 400px auto;
-  justify-content: space-around;
-  gap: 5px;
+.quality-container__video {
+  display: none;
 }
-
 .quality-container__video > video {
   border-radius: 3px;
-
 }
 .quality-container__tecnologias {
+  padding: 10px 0;
   display: flex;
-  flex-direction:column ;
+  overflow-x: scroll;
+  gap: 10px;
 }
 
 .box-tec {
@@ -136,13 +184,11 @@ section {
 }
 .box-tec > img {
   object-fit: contain;
-} 
+}
 .box-tec > p {
   margin: 0;
   text-align: center;
 }
-
-
 
 .about-us {
   height: 500px;
@@ -155,7 +201,7 @@ section {
   flex-direction: column;
   justify-content: space-between;
 }
-.about-us__footer > ul  {
+.about-us__footer > ul {
   display: flex;
   justify-content: center;
 }
@@ -177,15 +223,14 @@ section {
 .about-us::before {
   content: "";
   position: absolute;
-  top: 0; 
+  top: 0;
   left: 0;
-  width: 100%; 
-  height: 100%;  
-  opacity: .4; 
-  z-index: -1; 
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  z-index: -1;
   background: url("./assets/images/about_us.jpg") no-repeat;
   background-attachment: fixed;
   background-position: center 50%;
   background-size: 100%;
-
 }
