--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,16 @@ body {
   text-transform: uppercase;
   font-size: 2rem;
 }
+body {
+  padding: 10px;
+}
 
+
+
+@media screen and (min-width: 768px) {
+  
+  body {
+    padding: 10px 0;
+  }
+
+}
