--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   background: #f5f5f5;
   font-family: "Source Sans Pro", sans-serif;
   max-width: 1024px;
+  min-width: 375px;
   margin: auto auto;
   position: relative;
 }
