--- a/src/page/About/index.css
+++ b/src/page/About/index.css
@@ -1,50 +1,49 @@
-.group-video__container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  justify-content: center;
-  gap: 10px;
-}
 .video_item {
   height: 320px;
   border-radius: 3px;
   overflow: hidden;
 }
-.quality-container__video {
-  display: none;
-}
+
 .quality-container__video > video {
   border-radius: 3px;
 }
 .quality-container__tecnologias {
   padding: 10px 0;
   display: flex;
-  overflow-x: scroll;
-  gap: 10px;
 }
 
-.box-tec {
-  width: 150px;
-  margin-left: 2px;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 3px;
+.box-tec {  
+  width: 100%;
+  height: 100%;
+  max-width: 150px;
+  max-height: 150px;
+  text-align: center;
+  margin: 5px;
 }
 .box-tec:first-child {
   margin-left: 0;
 }
 .box-tec > img {
-  object-fit: contain;
+  width: 70%;
+  height: 70%;
+  object-fit: cover;
 }
 .box-tec > p {
   margin: 0;
   text-align: center;
 }
+.quality-container {
+  display: flex;
+  flex-direction: column-reverse;
 
+}
 @media screen and (min-width: 768px) {
-
+  .box-tec {
+    margin:10px;
+  }
+  .box-tec:first-child {
+    margin-left:10px;
+  }
   .quality-container {
     display: grid;
     grid-template-columns: 420px 1fr;
