--- a/src/components/Header/HeaderDesktop/index.scss
+++ b/src/components/Header/HeaderDesktop/index.scss
@@ -1,9 +1,10 @@
 .header-desktop {
   display: none;
   height: 600px;
-  background: url('../../../assets/images/image_header.jpg');
+  background: url('../../../assets/album/image12.jpg');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 10%;
+  background-size: cover;
 }
 
 .header-menu {
