--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ a  {
 body {
   margin: 0;
   padding: 0;
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
+  background: black;
+  color: white;
   font-family: "Source Sans Pro", sans-serif;
   max-width: 1024px;
   min-width: 375px;
