--- a/src/components/Header/HeaderMobile/index.css
+++ b/src/components/Header/HeaderMobile/index.css
@@ -51,7 +51,8 @@
 .header-mobile__icon {
   width: 25px;
 }
-.header-mobile__icon  img {
+.header-mobile__icon >  img {
   width: 100%;
   height: 100%;
+  filter: invert(1);
 }
