--- a/src/components/Header/HeaderMobile/index.css
+++ b/src/components/Header/HeaderMobile/index.css
@@ -3,7 +3,8 @@
   position: relative;
 }
 .header-mobile__menu {
-  z-index: 1;
+  z-index: 2;
+  width: 50%;
   position: fixed;
   left: 0;
   right: 0;
@@ -24,13 +25,13 @@
 .header-mobile__close {
   position: absolute;
   right: 10%;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 .header-mobile__menu a {
   text-decoration: none;
   color: white;
   text-align: left;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 .header-mobile__menu li {
   list-style: none;
