--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,10 +1,18 @@
+.header-desktop{
+  display: none;
+}
+
+.header-mobile {
+  display: block;
+}
 
 
-@media screen and (min-width: 768px) {
-  .header-desktop {
-    display: flex;
+
+@media screen and (min-width:768px) {
+  .header-desktop{
+    display: block;
   }
-  .header-mobile {
+  .header-mobile{
     display: none;
   }
 }
