--- a/src/page/Home/index.scss
+++ b/src/page/Home/index.scss
@@ -1,4 +1,4 @@
-.home-container{
+.home-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,12 +10,11 @@
   display: block;
   width: 100%;
   height: 300px;
-  position: relative; 
+  position: relative;
   overflow: hidden;
   cursor: pointer;
-  animation: show 2s ease-in-out  ;
+  animation: show 2s ease-in-out;
   img {
-
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -35,11 +34,10 @@
     z-index: 1;
     font-size: 1.5rem;
     font-weight: 700;
-    transition: all 2s;
   }
 }
 
-.home-category:hover{
+.home-category:hover {
   &::before {
     background: transparent;
   }
@@ -51,7 +49,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: url("../../assets/album/image8.jpg") ;
+  background: url('../../assets/album/image10.jpg');
   background-position: center 6%;
 }
 .portrait::after {
@@ -61,7 +59,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: url("../../assets/album/image52.jpg");
+  background: url('../../assets/album/image52.jpg');
   background-position: center 10%;
 }
 .home-category::before {
@@ -72,41 +70,32 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba($color: #000000, $alpha: .4);
+  background-color: rgba($color: #000000, $alpha: 0.4);
 }
 
-
-
-@keyframes move {
-  0%{
-    transform: rotate(10deg);
-  }
-  25%{
-
-    transform: rotate(0);
-  }
-  50% {
-    transform: rotate(-10deg);
-    
+@keyframes showp {
+  0% {
+    display: none;
   }
   100%{
-    transform: rotate(0);
+    
+    display: block;
   }
 }
 @keyframes show {
-  0%{
-    transform: scale(1.02);
+  0% {
+    transform: scale(.05);
     opacity: 0;
   }
-  100%{
+  100% {
     transform: scale(1);
     opacity: 1;
   }
 }
-@media screen and (min-width:580px) { 
- .home-category {
-   p {
-     font-size: 2rem;
-   }
- }
+@media screen and (min-width: 580px) {
+  .home-category {
+    p {
+      font-size: 2rem;
+    }
+  }
 }
