--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 a  {
   text-decoration: none;
   color: inherit;
@@ -7,13 +10,9 @@ a  {
 body {
   margin: 0;
   padding: 0;
-  /* background: #f5f5f5; */
-  background: black;
   color: white;
   font-family: "Source Sans Pro", sans-serif;
-  max-width: 1024px;
   min-width: 375px;
-  margin: auto auto;
   position: relative;
 }
 .container-section {
@@ -34,20 +33,6 @@ body {
   text-transform: uppercase;
   font-size: 2rem;
 }
-body {
-  padding: 10px;
-}
-
-
-
-@media screen and (min-width: 768px) {
-  
-  body {
-    padding: 10px 0;
-  }
-
-}
-
 .cniSon {
   color: white !important;
 }
