--- a/src/page/Home/index.scss
+++ b/src/page/Home/index.scss
@@ -1,101 +1,72 @@
+
+@font-face {
+  font-family: 'font_alex';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../assets/fonts/font_alex.otf'); /* IE9 Compat Modes */
+}
+.home {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .home-container {
+  display: grid;
+  height: 100%;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+}
+
+.home-container_right {
+  align-self: flex-start;
+  h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 5rem;
+    padding-right: 30%;
+  }
+  p {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: #c0bfc2;
+  }
+}
+.home-container_left {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  padding: 10px;
+  height: 100%;
+  gap :10px;
 }
-.home-category {
-  border-radius: 3px;
-  display: block;
+
+.home__main__footer {
+  display: grid;
   width: 100%;
-  height: 300px;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  animation: show 2s ease-in-out;
+  background-color: rgba($color: #000000, $alpha:0.4);
+  grid-template-columns: 400px 1fr 400px;
+
+}
+.footer__other {
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.footer__last {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  p {
+    margin-left: 20px;
+    font-weight: 700;
+    letter-spacing: 5px;
+  }
   img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-  }
-  p {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: transparent;
-    color: white;
-    z-index: 1;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
-}
-
-.home-category:hover {
-  &::before {
-    background: transparent;
-  }
-}
-.urban::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: url('../../assets/album/image10.jpg');
-  background-position: center 6%;
-}
-.portrait::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: url('../../assets/album/image52.jpg');
-  background-position: center 10%;
-}
-.home-category::before {
-  content: '';
-  z-index: 1;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgba($color: #000000, $alpha: 0.4);
-}
-
-@keyframes showp {
-  0% {
-    display: none;
-  }
-  100%{
-    
-    display: block;
-  }
-}
-@keyframes show {
-  0% {
-    transform: scale(.05);
-    opacity: 0;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-@media screen and (min-width: 580px) {
-  .home-category {
-    p {
-      font-size: 2rem;
-    }
   }
 }
