--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -75,6 +75,11 @@
   font-weight: bold;
   transition: 0.3s;
   text-align: center;
+  img {
+    width: 35px;
+    height: 35px;
+    filter: invert(1);
+  }
 }
 
 .close:hover,
