--- a/src/page/Photography/index.scss
+++ b/src/page/Photography/index.scss
@@ -1,32 +1,39 @@
 .group-photos{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 .group-photos__container {
   padding: 10px;
-  height: 100%;
   display: grid;
-  position: relative;
+  grid-template-columns: repeat(auto-fit , minmax(auto ,250px));
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(150px, auto));
-  grid-template-rows: repeat(auto, 1fr );
   gap: 10px;
-  position: relative;
 }
 .group-photos__container__item {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 3px;
+  border-radius: 10px;
   cursor: pointer;
+  transition: transform 1s linear;
+  border: 2px solid transparent;
+}
+.group-photos__container__item:hover {
+  transform: scale(1.1);
+  border: 2px solid white;
 }
 
 .group-photos-h2 {
   margin: 0;
   text-align: center;
   text-transform: capitalize;
+  font-size: 3rem;
+  font-weight: 400;
+}
+
+.wrap-loading {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 // @media screen and (min-width:768px) {
