--- a/src/components/Category/index.scss
+++ b/src/components/Category/index.scss
@@ -4,6 +4,12 @@
   justify-content: center;
   border-radius: 5px;
   box-shadow: 10px 10px 10px rgba($color: #000000, $alpha: .7);
+  min-width: 150px;
+  min-height: 150px;
+  max-height: 300px;
+  max-width: 300px;
+  width: 100%;
+  height: 100%;
   a {
     font-size: 1.4rem;
     text-shadow: 10px 10px 10px black;
