--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -20,6 +20,7 @@
     a {
       font-size: 1.3rem;
       font-weight: 500;
+      text-transform: capitalize;
     }
     border-bottom: 1px solid transparent;
     padding: 20px 0;
@@ -35,7 +36,7 @@
   }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:769px) {
   .header {
     display: flex;
   }
