--- a/src/page/Home/index.scss
+++ b/src/page/Home/index.scss
@@ -12,19 +12,22 @@
   justify-content: space-between;
 }
 .home-container {
-  display: grid;
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column-reverse;
   height: 100%;
-  align-items: center;
-  grid-template-columns: 1fr 1fr;
 }
 
 .home-container_right {
-  align-self: flex-start;
+  margin-top: 20px;
+
+  width: 100%;
+  text-align: center;
   h2 {
     margin: 0;
     padding: 0;
-    font-size: 5rem;
-    padding-right: 30%;
+    font-size: 3rem;
   }
   p {
     font-weight: 400;
@@ -33,16 +36,15 @@
   }
 }
 .home-container_left {
-  height: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 100%;
   gap :10px;
+  align-items: center;
 }
 
 .home__main__footer {
-  display: grid;
+  display: none;
   width: 100%;
   background-color: rgba($color: #000000, $alpha:0.4);
   grid-template-columns: 400px 1fr 400px;
@@ -68,5 +70,26 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (min-width:769px){
+  .display{
+    display: flex;
+
+  }
+  .home-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .home__main__footer{
+    display: grid;
+  }
+}
+@media screen and (min-width:376px) {
+  .home-container{
+    h2{
+      font-size: 5rem;
+    }
   }
 }
