--- a/src/components/Category/index.scss
+++ b/src/components/Category/index.scss
@@ -1,6 +1,6 @@
 .category-container {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   border-radius: 5px;
   box-shadow: 10px 10px 10px rgba($color: #000000, $alpha: .7);
@@ -11,6 +11,9 @@
   width: 100%;
   height: 100%;
   a {
+    text-transform: uppercase;
+    color: bisque;
+    font-weight: 700;
     font-size: 1.4rem;
     text-shadow: 10px 10px 10px black;
   }
