--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,3 +1,4 @@
+$animation_duration: .2s;
 
 @font-face {
   font-family: 'font_alex';
@@ -16,7 +17,7 @@
 }
 .container-left-bar{
   position: absolute;
-  transition: transform .5s linear;
+  transition: transform $animation_duration linear;
   z-index: 1;
   left: -150px;
   background-color: #363739;
@@ -35,7 +36,6 @@
   height: 25px;
   filter: invert(1);
   transform: rotate(180deg);
-  transition: transform 1s ;
   cursor: pointer;
 }
 
@@ -45,11 +45,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: transform .5s linear, width  .5s linear;
+  transition: transform $animation_duration linear, width  $animation_duration linear;
 }
-
-
-
 .layout__main__content {
   width: 100%;
   height: 100%;
@@ -91,7 +88,7 @@
   }
   .container-left-bar{
     position: relative;
-    transition: transform .5s linear;
+    transition: transform $animation_duration linear;
     background: transparent;
     z-index: 1;
     left:0;
@@ -109,12 +106,7 @@
     height: 25px;
     filter: invert(1);
     transform: rotate(0);
-    transition: transform 1s ;
     cursor: pointer;
-  }
-
-  .container-left-bar__button-hidde--rotate {
-
   }
   .layout__main {
     height: 100vh;
@@ -123,7 +115,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    transition: transform .5s linear, width  .5s linear;
+    transition: transform $animation_duration linear, width  $animation_duration linear;
   }
   .layout__main--move{
     transform: translate(-150px);
