--- a/src/components/Category/index.scss
+++ b/src/components/Category/index.scss
@@ -2,21 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
   box-shadow: 10px 10px 10px rgba($color: #000000, $alpha: .7);
-  min-width: 150px;
-  min-height: 150px;
-  max-height: 300px;
-  max-width: 300px;
-  width: 100%;
-  height: 100%;
-  a {
-    text-transform: uppercase;
-    color: bisque;
-    font-weight: 700;
-    font-size: 1.4rem;
-    text-shadow: 10px 10px 10px black;
-  }
+  width: 320px;
+  height: 320px;
+  text-transform: uppercase;
+  color: #DBC18D;
+  font-weight: 700;
+  font-size: 1.4rem;
+  text-shadow: 10px 10px 10px black;
   cursor: pointer;
+  margin: 10px 0;
 }
 
