--- a/src/index.css
+++ b/src/index.css
@@ -14,19 +14,37 @@ a  {
   cursor: pointer;
 }
 
+.wrap-section {
+  padding: 0 1%;
+  /* overflow-y: auto; */
+}
+@media screen and (min-width:768px) {
+  .wrap-section {
+    padding: 0 10%;
+  }
+}
+.title-page {
+  font-size: 2.6rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .title-elezetta {
-  
   font-family: font_alex ;
   font-size: 3rem;
   text-align: center;
 }
 body {
+
+  font-family: 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
   color: white;
-  font-family: "Source Sans Pro", sans-serif;
+  /* font-family: "Source Sans Pro", sans-serif; */
   min-width: 375px;
   position: relative;
+  background-color: black;
 }
 .container-section {
   display: grid;
