--- a/src/page/Home/index.scss
+++ b/src/page/Home/index.scss
@@ -1,106 +1,51 @@
-.home {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 .home-container {
-  width: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: column-reverse;
-  height: 100%;
-}
-.home__title-elezetta {
-  display: block;
-  margin: 0;
-  margin-top: 40px;
-  padding: 0;
+  align-items: center;
 }
 .home-container_right {
-  margin-top: 20px;
-
-  width: 100%;
   text-align: center;
   h2 {
     margin: 0;
-    padding: 0;
     font-size: 3rem;
   }
-  p {
-    font-weight: 400;
-    font-size: 1.2rem;
-    color: #c0bfc2;
+  p{
+    color: rgb(238, 238, 238);
+    font-size: 1.3rem;
   }
-}
-.home-container_left {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  gap :10px;
-  align-items: center;
-}
-
-.home__main__footer {
-  display: none;
-  width: 100%;
-  background-color: rgba($color: #000000, $alpha:0.4);
-  grid-template-columns: 400px 1fr 400px;
-
-}
-.footer__other {
-  margin-right: 20px;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.footer__last {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  p {
-    margin-left: 20px;
-    font-weight: 700;
-    letter-spacing: 5px;
-  }
-  img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+  h1 {
+    display: block;
   }
 }
 
-@media screen and (min-width:769px){
-  .display{
-    display: flex;
-
-  }
-  .home__title-elezetta{
-    display: none;
-  }
-  .home-container{
+@media screen  and (min-width:768px){
+  .home-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit , minmax(200px , 1fr));
+    align-items: center;
+    height: 100%;
+    gap: 20px;
   }
   .home-container_left {
-    align-self: center;
+    display: flex;
+    gap: 20px;
   }
-  .home__main__footer{
-    display: grid;
-  }
-}
-@media screen and (min-width:769px) {
-  .home-container{
-    h2{
+  .home-container_right {
+    text-align: center;
+    h2 {
+      margin: 0;
       font-size: 4rem;
     }
-  }
-}
-@media screen and (min-width:1025px) {
-  .home-container{
-    h2{
-      font-size: 5rem;
+    p{
+      color: rgb(238, 238, 238);
+      font-size: 1.3rem;
+    }
+    h1 {
+      display: none;
     }
   }
+  .home__main__footer {
+    background: rgba($color: #000000, $alpha: .6);
+  }
 }
+
