--- a/src/index.css
+++ b/src/index.css
@@ -35,13 +35,16 @@ a  {
   font-size: 3rem;
   text-align: center;
 }
+p {
+  font-family: "Source Sans Pro", sans-serif;
+  letter-spacing: normal;
+}
 body {
-
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'font_alex','Times New Roman', Times, serif;
+  letter-spacing: 5px;
   margin: 0;
   padding: 0;
   color: white;
-  /* font-family: "Source Sans Pro", sans-serif; */
   min-width: 375px;
   position: relative;
   background-color: black;
