mini footer change font

--- a/src/components/Category/index.scss
+++ b/src/components/Category/index.scss
@@ -6,9 +6,9 @@
   width: 320px;
   height: 320px;
   text-transform: uppercase;
-  color: #DBC18D;
+  color: #f3f3f3;
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 2.7rem;
   text-shadow: 10px 10px 10px black;
   cursor: pointer;
   margin: 10px 0;
