--- a/src/components/ShowPhotos/index.scss
+++ b/src/components/ShowPhotos/index.scss
@@ -1,11 +1,12 @@
 
 .group-photos__container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill , minmax(50px ,150px));
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
 }
 .group-photos__container__item {
+  max-width: 150px;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -17,10 +18,4 @@
 .group-photos__container__item:hover {
   transform: scale(1.01);
   border: 2px solid #f3f3f3;
-}
-@media screen and (min-width:769px) {
-  .group-photos__container {
-    grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
-  }
-  
 }
