--- a/src/components/ShowPhotos/index.scss
+++ b/src/components/ShowPhotos/index.scss
@@ -1,14 +1,13 @@
 
 .group-photos__container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill , minmax(50px ,150px));
   justify-content: center;
   gap: 10px;
 }
 .group-photos__container__item {
-  max-width: 150px;
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   cursor: pointer;
   transition: transform .2s linear;
