--- a/src/page/Photography/index.scss
+++ b/src/page/Photography/index.scss
@@ -4,3 +4,27 @@
   align-items: center;
   justify-content: center;
 }
+.photo-category-header {
+  position: relative;
+  overflow: hidden;
+  height: 100px;
+  margin: 30px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width:768px) {
+    height: 400px;
+  }
+}
+.photo-category-header::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba($color: #000000, $alpha: 0.3);
+}
